# urus

./: CMakeLists.txt  CPP_LINKS.txt  FIXME_LIST.TXT  README.md  TODO.txt  build.sh  build_with_tests.sh  clean.sh  clear_cache.sh  main.cpp  proj_cpp_rules.md  setup.sh  start.bat  start.sh
cmake/: configure_gtest.cmake  download_gtest.cmake  log_tests_disabled.cmake  log_tests_enabled.cmake
lib/: readme.md
lib/include/gsl/: assert.h
lib/x64/: freeglut_static.lib  freeglut_staticd.lib  glew64_static.lib  glew64_staticd.lib
src/application/: application.cpp  application.h  viewer.cpp  viewer.h
src/engine/: README.md
src/engine/backend/gl/: Draw.cpp  GLRenderer.cpp  GLRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Uniform.cpp  Uniform.h  VertexAttribute.cpp
src/engine/backend/opengl/: Draw.cpp  GLRenderer.h  IndexBuffer.cpp  Uniform.cpp  VertexAttribute.cpp  VertexAttribute.h
src/engine/base/: Macros.h  MacrosTemp.h  OpenGLSupport.h  compiler_support.h  core.h  macros.h  opengl_support.h  singleton.h
src/engine/controls/: InputDispatcher.cpp  input_dispatcher.h
src/engine/geometry/: BoundingBox.cpp  BoundingBox.h  Mesh.cpp  Mesh.h
src/engine/graphics/: attribute.cpp  attribute.h  display_config.cpp  display_config.h  draw.cpp  draw.h  graphics_object.cpp  graphics_object.h  indexbuffer.cpp  indexbuffer.h  node.cpp  node.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h  uniform.cpp  uniform.h  vertex_attribute.cpp  vertex_attribute.h
src/engine/graphics/render/: renderer.cpp
src/engine/graphics/shader/: shader.cpp
src/engine/graphics/tex/: texture.cpp  texture.h  texture_loader.cpp  texture_loader.h
src/engine/graphics/viewtransform/: viewtransform.cpp  viewtransform.h
src/engine/input/: input_dispatcher.cpp  input_processor.cpp  input_processor.h  trackball.h
src/engine/mesh/: Mesh.cpp  Mesh.h
src/engine/render/: Camera.cpp  Camera.h  Renderer.h
src/engine/renderer/: AbstractRenderer.cpp  AbstractRenderer.h  Renderer.cpp  Renderer.h
src/engine/scene/: SceneNode.cpp  SceneNode.h  node.cpp  scene.cpp  scene.h
src/engine/shader/: Shader.cpp  Shader.h
src/engine/texture/: Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/engine/viewtransform/: DisplayConfig.cpp  DisplayConfig.h  ViewTransform.cpp  ViewTransform.h
src/engine/window/: console.cpp  console.h  window.cpp  window.h
src/game/: PathTracer.cpp  PathTracer.h  PointCloudViewer.cpp  PointCloudViewer.h  game.cpp  game.h  glut_dispatch.h  path_tracer.cpp  path_tracer.h  point_cloud_viewer.cpp  point_cloud_viewer.h
src/game/model/: GameWorld.cpp  game_world.cpp  game_world.h
src/game/view/: AnyView.cpp  ConsoleView.cpp  ConsoleView.h  GameView.cpp  GameView.h  any_view.cpp  any_view.h  console_view.cpp  console_view.h  game_view.cpp  game_view.h  views.h
src/glsl/: color.frag  color.vert  coord_sys.frag  coord_sys.vert  shader0.frag  shader0.vert  shader1.frag  shader1.vert
src/macaque/: mat4.h  mq_math.h  vec.h  vec2.h  vec3.cpp  vec3.h  vec4.h
src/mqMath/: Mat.cpp  Mat.h  Mat2.cpp  Mat3.cpp  Mat4.cpp  Mat4.h  MqMath.h  RowMajorMat4.h  Vec.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/shader_tmp/: shader.cpp  shader.h  shader_data.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  TestSuite1.cpp  main.cpp
